--- a/app/class_teacher/templates/pages/add-student/add_student_class.html
+++ b/app/class_teacher/templates/pages/add-student/add_student_class.html
@@ -33,6 +33,7 @@
                                     <label>CID</label>
                                     <input type="text" placeholder="Enter CID" class="form-control" name="cid" id="cid">
                                 </div>
+                                <input type="hidden" id="user_id" name="user_id" value="{{current_user.id}}">
                                 <div class="col-sm-4 form-group">
                                     <label>Index Number</label>
                                     <input type="text" placeholder="Enter Index Number" class="form-control"
@@ -42,12 +43,14 @@
                                 <div class="col-md-4 mt-2">
                                     <br>
 
-                                    <button type="submit"  class="btn btn-success" style="font-size:15px">
+                                    <button type="submit" class="btn btn-success" style="font-size:15px">
                                         Search
                                     </button> <br>
                                 </div>
                             </div>
                         </form>
+
+                        
                         <div class="card-body">
                             <div class="row">
                                 <div class="table-responsive">
@@ -59,14 +62,13 @@
                                                 <th scope="col" class="sort" data-sort="budget">CID</th>
                                                 <th scope="col" class="sort" data-sort="name">Student Name</th>
                                                 <th scope="col" class="sort" data-sort="name">Email</th>
-                                                <th scope="col" class="sort" data-sort="name">Status</th>
                                                 <th scope="col">action</th>
                                             </tr>
                                         </thead>
                                         <tbody class="list" id="add_std">
 
-                                           
-                                           
+
+
 
                                         </tbody>
                                     </table>
@@ -133,33 +135,65 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
-$("#add_student").on("submit", function (e) {
-		e.preventDefault(e);
-		var form_data = new FormData($('#add_student')[0])
-		$.ajax({
-			type: 'POST',
-			url: "/search-for-std",
-			data: form_data,
-			contentType: false,
-			cache: false,
-			processData: false,
-			success: function (res) {
+    $("#add_student").on("submit", function (e) {
+        e.preventDefault(e);
+        var form_data = new FormData($('#add_student')[0])
+        $.ajax({
+            type: 'POST',
+            url: "/search-for-std",
+            data: form_data,
+            contentType: false,
+            cache: false,
+            processData: false,
+            success: function (res) {
                 const { aaData } = res;
-                $("#add_std").append('<tr><td>'+aaData[0].sl+'</td><td>'+aaData[0].index_number+'</td><td>'+aaData[0].student_cid+'</td><td>'+aaData[0].first_name +' '+ aaData[0].last_name+'</td><td>'+aaData[0].student_email +'</td><td>'+aaData[0].status +'</td><td>'+ '<a class="btn btn-sm btn-icon-only text-light" id="add_new_std" role="button" style="background:orange">' +
-                        '<b>Add</b>' +
-                        '</a>'  +'</td></tr>' )
-                        
-                    $("#add_new_std").click(function(){
-                       window.location = '/get-std-list'
-                        
-                    })
-                
-            
-			}
+                $("#add_std").append(' <tr><td>' + aaData[0].sl + '</td><td>' + aaData[0].index_number + '</td><td>' + aaData[0].student_cid + '</td><td>' + aaData[0].first_name + ' ' + aaData[0].last_name + '</td><td>' + aaData[0].student_email + '</td><td>' + '<a class="btn btn-sm btn-icon-only text-light" id="add_new_std" role="button" style="background:orange">' +
+                    '<b>Add</b>' +
+                    '</a>' + '</td></tr>')
 
-		});
-	});
+
+                //     swal("Student successfully added", "Click Ok to continue", "success")
+                //         .then(function () {
+                //             window.location = "/get-std-list"
+                //         })
+                // })
+                $("#add_new_std").click(function () {
+                    var form_data = new FormData($('#add_student')[0])
+                    $.ajax({
+                        type: "POST",
+                        url: "/update-std-details",
+                        data: form_data,
+                        contentType: false,
+                        cache: false,
+                        processData: false,
+
+                        success: function (data) {
+                            if (data === "error") {
+                                swal('Error', 'Could Not Add Student', 'error').then(function () {
+                                    location.reload()
+                                })
+                            } else {
+                                swal('Success', 'Student Successfully Added', 'success').then(function () {
+                                    window.location = "/get-std-list"
+                                })
+                            }
+
+                        },
+                        error: function () {
+                            swal('Error', 'Could Not Add Student', 'error').then(function () {
+                                location.reload()
+                            })
+                        }
+                    });
+                });
+
+
+            }
+
+        });
+    });
 </script>
 
 {% endblock javascripts %}
