--- a/app/class_teacher/templates/pages/add-student/view_std_mark.html
+++ b/app/class_teacher/templates/pages/add-student/view_std_mark.html
@@ -56,7 +56,15 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <a class="btn btn-sm btn-primary" id="add_new_std" href="{{url_for('class_teacher_blueprint.view_student_detail')}}" role="button" >
+
+                                  
+                                    <hr>
+                                    <h4 class="card-title">Student Individual Remarks</h4>
+                                    <p><b>Punctuality:</b> Outstanding</p>
+                                    <p><b>Discipline:</b> Very Good</p>
+                                    <p><b>Social Service:</b> Outstanding</p>
+                                    <p><b>Leadership Quality:</b> Outstanding</p>
+                                    <a class="btn btn-sm btn-primary" id="add_new_std" href="" role="button" >
                                         <b>Back</b></a>
                                 </div>
 
