--- a/app/home/templates/enroll_student.html
+++ b/app/home/templates/enroll_student.html
@@ -69,6 +69,15 @@
 						*</span></div>
 				<!-- student's detail -->
 				<div class="student">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="form-group">
+								<label for="half_photo" class="form-control-label">Upload Passport Size Photo (image)</label>
+								<input type="file" class="form-control rounded-2" name="half_photo" id="half_photo" />
+							</div>
+						</div>
+					</div>
+					
 					<div class="row ">
 						<div class="col-sm-4 form-group">
 							<label>CID</label>
