--- a/app/class_teacher/templates/pages/add-student/class_teacher_assessment.html
+++ b/app/class_teacher/templates/pages/add-student/class_teacher_assessment.html
@@ -41,7 +41,6 @@
                                                 <th scope="col" class="sort" data-sort="name">Annual Exam</th>
                                                 <th scope="col" class="sort" data-sort="name">CA</th>
                                                 <th scope="col" class="sort" data-sort="name">SUPW Grade</th>
-
                                                 <th scope="col">action</th>
                                             </tr>
                                         </thead>
@@ -70,27 +69,24 @@
                                                     <b>View</b> </a></td>
                                                
                                             </tr>
-                                           
-                                           
-                                           
-
                                         </tbody>
                                     </table>
+                                    <hr>
+                                    <h4 class="card-title">Student Individual Remarks</h4>
+                                    <p><b>Punctuality:</b> Outstanding</p>
+                                    <p><b>Discipline:</b> Very Good</p>
+                                    <p><b>Social Service:</b> Outstanding</p>
+                                    <p><b>Leadership Quality:</b> Outstanding</p>
 
                                 </div>
-
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
